bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:3: error: type mismatch;
 found   : Int(7)
 required: Boolean
  if (talking == true && (0 <= hour <= 7)) {
                                       ^