bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  
  if (talking == true && (0 <= hour <= 7)) {
      return true
	}
 	return false
}